# ansible-role-acme_netcup

./: .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.yml  site.yml
defaults/: main.yml
meta/: main.yml  requirements.yml
molecule/all/: molecule.yml
molecule/default/: molecule.yml
molecule/resources/playbooks/: converge.yml  prepare.yml  verify.yml
tasks/: acme-accounts.yml  acme-certs.yml  acme-challenges.yml  acme.yml  main.yml
vars/: Alpine.yml  Archlinux.yml  Debian.yml  RedHat.yml  Suse.yml  openSUSE Tumbleweed.yml
