[project]
name = "acme_netcup"
version = "0.0.0"
description = "Ansible role for setting up acme_netcup."
authors = ["Jonas Mauer"]
license = "MIT"
keywords = ["acme", "certificate", "letsencrypt", "https", "netcup", "ssl", "tls"]
repository = "https://github.com/jomrr/ansible-role-acme_netcup"

[tool.commitizen]
name = "cz_conventional_commits"

[tool.semantic_release]
commit_message = "build(release): version {version}"
major_on_zero = false
upload_to_pypi = false
upload_to_vcs_release = true
version_toml = [
    "pyproject.toml:project.version",
]
